{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 98,
  "lineage": "29ce8ca9-316a-adfd-ee17-cfda3f97f04e",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "name": "jenkins",
                "resource_version": "4129",
                "uid": "9f8e8510-0983-4dcb-8d89-d91767f091e6"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:security-group/sg-00b76713c6264c798",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00b76713c6264c798",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.107.160.0/24"
                ],
                "description": "within_vpc",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0531618b2161a5e4e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Nodes on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0531618b2161a5e4e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "testing-innovation-poc-cluster-20240525115230177300000009",
            "name_prefix": "testing-innovation-poc-cluster-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-innovation-poc-cluster"
            },
            "tags_all": {
              "Name": "testing-innovation-poc-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:security-group/sg-0531618b2161a5e4e",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0531618b2161a5e4e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to Nodegroup all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00b76713c6264c798"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "testing-innovation-poc-node-2024052511523020840000000b",
            "name_prefix": "testing-innovation-poc-node-",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-innovation-poc-node",
              "kubernetes.io/cluster/testing-innovation-poc": "owned"
            },
            "tags_all": {
              "Name": "testing-innovation-poc-node",
              "kubernetes.io/cluster/testing-innovation-poc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-969880062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b76713c6264c798",
            "security_group_rule_id": "sgr-013775f6465246d1f",
            "self": false,
            "source_security_group_id": "sg-0531618b2161a5e4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Nodes on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-809633100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b76713c6264c798",
            "security_group_rule_id": "sgr-00749b8c21d7a656b",
            "self": false,
            "source_security_group_id": "sg-0531618b2161a5e4e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "within_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.107.160.0/24"
            ],
            "description": "within_vpc",
            "from_port": 0,
            "id": "sgrule-60225084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b76713c6264c798",
            "security_group_rule_id": "sgr-036630dc646ab74a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3850736852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-037fd1ce1eead0141",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3342865249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-0afa933229a4dd9cc",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3067104042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-0afe5cfcb64e912a8",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2140286140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-099bca9b1989d372f",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1825443997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-074c8504f3ba4d39b",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-141501270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-0c89989c56b0d4aed",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2072748604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-084251e163d9e793f",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_to_node_all_traffic",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Nodegroup all traffic",
            "from_port": 0,
            "id": "sgrule-1762123896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-09677b9d7969056cb",
            "self": false,
            "source_security_group_id": "sg-00b76713c6264c798",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2227757388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-06e8547c62ad6ce60",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-3094748523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-08b2d79ca3ba56af1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3864560013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-09363ee39a835e781",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1107763810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0531618b2161a5e4e",
            "security_group_rule_id": "sgr-0b17301d71dc79975",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:network-acl/acl-0f5637abaacb4dfe1",
            "default_network_acl_id": "acl-0f5637abaacb4dfe1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f5637abaacb4dfe1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "954503069243",
            "subnet_ids": [
              "subnet-04e32fc440eb85c5b",
              "subnet-055d0583ea36db72d",
              "subnet-05823175ac7f7bab9",
              "subnet-06ba1e2be3185be21",
              "subnet-0a4388bebdd437942",
              "subnet-0d6c2381ffc151640"
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:route-table/rtb-0625ee51ca5e53328",
            "default_route_table_id": "rtb-0625ee51ca5e53328",
            "id": "rtb-0625ee51ca5e53328",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:security-group/sg-0819e7914971513d1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0819e7914971513d1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "954503069243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-default",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb7aa8cea2121304",
            "association_id": "eipassoc-0e0d3f5a806da816f",
            "domain": "vpc",
            "id": "eipalloc-0eb7aa8cea2121304",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-008e452f229f99d37",
            "private_dns": "ip-10-107-160-148.eu-central-1.compute.internal",
            "private_ip": "10.107.160.148",
            "public_dns": "ec2-18-199-182-237.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.199.182.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-eu-central-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-eu-central-1a",
              "TeamName": "RnD"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:internet-gateway/igw-08a4254ea8866436e",
            "id": "igw-08a4254ea8866436e",
            "owner_id": "954503069243",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb7aa8cea2121304",
            "association_id": "eipassoc-0e0d3f5a806da816f",
            "connectivity_type": "public",
            "id": "nat-0fd541ca447bb25d9",
            "network_interface_id": "eni-008e452f229f99d37",
            "private_ip": "10.107.160.148",
            "public_ip": "18.199.182.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6c2381ffc151640",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-eu-central-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-eu-central-1a",
              "TeamName": "RnD"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a7e7b2bf8dffc5c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd541ca447bb25d9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7e7b2bf8dffc5c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a4254ea8866436e",
            "id": "r-rtb-076e4bd34307ace551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076e4bd34307ace55",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:route-table/rtb-066d4866b40991260",
            "id": "rtb-066d4866b40991260",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:route-table/rtb-0a7e7b2bf8dffc5c4",
            "id": "rtb-0a7e7b2bf8dffc5c4",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd541ca447bb25d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:route-table/rtb-076e4bd34307ace55",
            "id": "rtb-076e4bd34307ace55",
            "owner_id": "954503069243",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a4254ea8866436e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public",
              "TeamName": "RnD"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3158656d4d9da28",
            "route_table_id": "rtb-066d4866b40991260",
            "subnet_id": "subnet-04e32fc440eb85c5b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078631a4cdfb7b769",
            "route_table_id": "rtb-066d4866b40991260",
            "subnet_id": "subnet-06ba1e2be3185be21"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ad06f22cd02f0a7",
            "route_table_id": "rtb-0a7e7b2bf8dffc5c4",
            "subnet_id": "subnet-0a4388bebdd437942"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d2dd95eea1ac842",
            "route_table_id": "rtb-0a7e7b2bf8dffc5c4",
            "subnet_id": "subnet-05823175ac7f7bab9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01036158655642bb2",
            "route_table_id": "rtb-076e4bd34307ace55",
            "subnet_id": "subnet-0d6c2381ffc151640"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c8433b520967a45",
            "route_table_id": "rtb-076e4bd34307ace55",
            "subnet_id": "subnet-055d0583ea36db72d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-04e32fc440eb85c5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.107.160.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e32fc440eb85c5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-eu-central-1a",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-eu-central-1a",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-06ba1e2be3185be21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.107.160.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba1e2be3185be21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-eu-central-1b",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-db-eu-central-1b",
              "TeamName": "RnD"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-0a4388bebdd437942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.107.160.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4388bebdd437942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-eu-central-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-eu-central-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-05823175ac7f7bab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.107.160.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05823175ac7f7bab9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-eu-central-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-private-eu-central-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-0d6c2381ffc151640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.107.160.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6c2381ffc151640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-eu-central-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-eu-central-1a",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:subnet/subnet-055d0583ea36db72d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.107.160.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055d0583ea36db72d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954503069243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-eu-central-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc-public-eu-central-1b",
              "TeamName": "RnD",
              "kubernetes.io/cluster/testing-innovation-poc": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02cf70e1064776ace"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:954503069243:vpc/vpc-02cf70e1064776ace",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.107.160.0/24",
            "default_network_acl_id": "acl-0f5637abaacb4dfe1",
            "default_route_table_id": "rtb-0625ee51ca5e53328",
            "default_security_group_id": "sg-0819e7914971513d1",
            "dhcp_options_id": "dopt-0e5151266d2aa42cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02cf70e1064776ace",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0625ee51ca5e53328",
            "owner_id": "954503069243",
            "tags": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            },
            "tags_all": {
              "Businessunit": "testing",
              "Environment": "poc",
              "Managedby": "Terraform",
              "Name": "testing-innovation-vpc-poc",
              "TeamName": "RnD"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}